@@ -1,6 +1,6 @@
 \documentclass[12pt]{article}
 \usepackage{amsmath,amssymb}
-\usepackage{fancybox}\usepackage{epsfig}\usepackage{psfig}
+%\usepackage{fancybox}\usepackage{epsfig}\usepackage{psfig}
 %\usepackage{showkeys}
 \textwidth 6.5in\oddsidemargin 0in
 \textheight 9in\topmargin -0.5in
